<resources>
    <string name="app_name">TableOrder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_foodonor">Welcome to FoodOnUs</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">비밀번호 변경</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="confirm_email">이메일을 변경하면 로그인 정보도 변경됩니다.</string>
    <string name="confirm_mybooking">예약하시면 기존에 예약한 정보는 사라집니다.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="admin_out">관리자 모드를 나가시겠습니까?</string>
    <string name="admin_in">관리자 모드로 들어가시겠습니까?</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="already_having_an_account">Already having an account?</string>
    <string name="fill_in_the_details_to_create_account">계정을 만들기 위해 세부 정보를 입력하세요.</string>
    <string name="loading">Loading..</string>
    <string name="help">Help</string>
    <string name="my_pins">My pins</string>
    <string name="communicate">Communicate</string>
    <string name="my_menu">My Menu</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="history">History</string>
    <string name="about_us">About Us</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="receiver_name">Receiver name</string>
    <string name="food_item">Food item</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="booking_number">예약번호(No.) :</string>
    <string name="forexample_gmail_com">메일주소를 입력하세요</string>
    <string name="reset">변경 요청</string>
    <string name="home">Home</string>
    <string name="resturant_donor">Resturant</string>
    <string name="organization_receiver">Organization</string>
    <string name="admin">Admin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_web_client_id">52412280507-a8dcg8snsc9lf9gvubhhgik25uq7337a.apps.googleusercontent.com</string>
    <string name="success_login">구글 로그인 성공</string>
    <string name="failed_login">구글 로그인 실패</string>
    <string name="success_logout">로그아웃 되었습니다</string>
    <string name="status_login">이미 로그인 되어있습니다</string>
    <string name="admin_home">관리자 페이지</string>
    <string name="admin_regiRestaurant">식당 등록</string>
    <string name="my_page">마이 페이지</string>
    <string name="mypage_menu_account_management">계정 관리</string>
    <string name="mypage_menu_board">게시판</string>
    <string name="mypage_menu_app_management">앱 관리</string>
    <string name="mypage_myInfo">나의 정보</string>
    <string name="mypage_change_password">비밀번호 변경</string>
    <string name="mypage_delete_member">회원 탈퇴</string>
    <string name="mypage_reservation_history">예약내역</string>
    <string name="mypage_my_write">내가 쓴 글</string>
    <string name="mypage_my_comment">내가 쓴 댓/답글</string>
    <string name="mypage_setting">환경설정</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_table_reservation">내 예약</string>
    <string name="mypage_review">내 리뷰</string>
    <string name="mypage_review_history">내 리뷰 내역</string>
    <string name="disconnected">네트워크에 연결되지 않았습니다.</string>
    <string name="disconnected2">연결 시도 후 잠시만 기다려 주세요.</string>
    <string name="nickname">닉네임</string>
    <string name="name_view">Username : </string>
    <string name="edit">수정</string>
    <string name="edit_cancel">수정 취소</string>
    <string name="complete">수정 완료</string>
    <string name="level">등급</string>
    <string name="tel">Tel</string>
    <string name="navigation_drawer_open">drawer 열림</string>
    <string name="navigation_drawer_close">drawer 닫힘</string>
    <string name="booking_time">"예약 시간 : "</string>
    <string name="peopleNumber">인원 수 :</string>
    <string name="call">호출</string>
    <string name="holding">보류</string>
    <string name="confirm_book">예약확인</string>
    <string name="btn_open">Open/Close</string>
</resources>