<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".fragment.mypage.MypageFragment">

        <ScrollView
            android:id="@+id/connected_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/mypage_account_management_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/mypage_menu_account_management" />

                    <TextView
                        android:id="@+id/btn_mypage_myInfo"
                        style="@style/mypage_textviewstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mypage_textview_top_edge"
                        android:clickable="true"
                        android:text="@string/mypage_myInfo" />

                    <TextView
                        android:id="@+id/btn_mypage_change_password"
                        style="@style/mypage_textviewstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/mypage_textview_middle_edge"
                        android:clickable="true"
                        android:text="@string/mypage_change_password" />

                    <TextView
                        android:id="@+id/btn_mypage_delete_member"
                        style="@style/mypage_textviewstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/mypage_textview_bottom_edge"
                        android:clickable="true"
                        android:text="@string/mypage_logout" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mypage_reservation_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mypage_account_management_layout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/mypage_table_reservation" />

                    <TextView
                        android:id="@+id/btn_mypage_reservation_history"
                        style="@style/mypage_textviewstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mypage_textview_total_edge"
                        android:clickable="true"
                        android:text="@string/mypage_reservation_history" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mypage_review_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mypage_account_management_layout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/mypage_review" />

                    <TextView
                        android:id="@+id/btn_mypage_review_history"
                        style="@style/mypage_textviewstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mypage_textview_total_edge"
                        android:clickable="true"
                        android:text="@string/mypage_review_history" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mypage_board_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mypage_reservation_layout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/mypage_menu_board" />

                    <TextView
                        android:id="@+id/btn_mypage_write_history"
                        style="@style/mypage_textviewstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mypage_textview_top_edge"
                        android:clickable="true"
                        android:text="@string/mypage_my_write" />

                    <TextView
                        android:id="@+id/btn_mypage_comment_history"
                        style="@style/mypage_textviewstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/mypage_textview_bottom_edge"
                        android:clickable="true"
                        android:text="@string/mypage_my_comment" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/mypage_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mypage_board_layout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/mypage_menu_app_management" />

                    <TextView
                        android:id="@+id/btn_mypage_setting"
                        style="@style/mypage_textviewstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mypage_textview_top_edge"
                        android:clickable="true"
                        android:text="@string/mypage_setting" />

                    <TextView
                        android:id="@+id/btn_mypage_logout"
                        style="@style/mypage_textviewstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/mypage_textview_bottom_edge"
                        android:clickable="true"
                        android:text="@string/mypage_delete_member" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/disconnected_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            android:visibility="gone">

            <TextView
                android:id="@+id/tv_disconnected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/disconnected"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_disconnected2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/disconnected2"
                android:textSize="24sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/mypageProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>