<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/confirm_email"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorPrimary" />



    <LinearLayout
        android:id="@+id/dialogLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:cornerRadius="20dp" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar6"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:indeterminateDrawable="@drawable/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>