<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.receive.RestaurantFragment"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/donations_row_layout">



    </androidx.recyclerview.widget.RecyclerView>
    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:text="가게 이름 : " />
    <TextView
        android:id="@+id/restaurantNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/restaurantName"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:text="음식점" />
    <TextView
        android:id="@+id/booked_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantName"
        android:text="현재 예약 수 : " />
    <TextView
        android:id="@+id/booked_count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/booked_count"
        app:layout_constraintTop_toBottomOf="@id/restaurantName"
        android:text="123" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="120dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/orange"
        android:text="@string/confirm_book" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHold"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toStartOf="@id/btnConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/holding" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCall"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toStartOf="@id/btnHold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/call" />
    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>